--- a/module2solution.css/module2-solution.css
+++ b/module2solution.css/module2-solution.css
@@ -1,5 +1,6 @@
 
 <style>
+
 	*{
   box-sizing: border-box;
 }
@@ -8,8 +9,18 @@ h1{
   text-align: center;
 }
 
+#container {
+  position: relative;
+  
+}
+
+.row {
+  width: 100%;
+
+}
+
 p {
-  background-color: #bfbfbf;
+  background-color: gray;
   border: 2px solid black;
   height: 150px;
   margin-right: 10px;
@@ -18,57 +29,54 @@ p {
 }
 
 
-#container {
-  position: relative;
-  
-}
 
 #p1 {
-  background-color: #D59898;
+  background-color: deeppink;
+  color: solid black;
+  border-width: 2px;
+  border-color: solid black;
   position: absolute;
+  height: 15px;
+  width: 140px;
   top: 0;
   right: 0;
-  font-weight: bold;
-  height: 15px;
-  width: 120px;
   padding: 10px;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica;
 
 }
 #p2 {
-  background-color:#C14543 ;
+  background-color:indianred ;
   color: white;
+  border-width: 2px;
+  border-color: solid black;
   position: absolute;
   top: 0;
   right: 0;
   font-weight: bold;
   height: 15px;
-  width: 120px;
+  width: 140px;
   padding: 10px;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica;
 
 }
 #p3 {
- background-color: #E5D198;
+ background-color: lightgoldenrodyellow;
+ color: black;
+ border-width: 2px;
+  border-color: black;
   position: absolute;
   top: 0;
   right: 0;
   font-weight: bold;
   height: 15px;
-  width: 120px;
+  width: 140px;
   padding: 10px;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-
+  font-family: Helvetica;
 }
 
-
-.row {
-  width: 100%;
-
-}
 
 
 /********** Large devices only **********/
@@ -206,4 +214,5 @@ p {
 
   
 }
+
 </style>
